# ag-workshop

./: .gitmodules  CMakeLists.txt  README.md
scripts/: dist.sh
src/: checkerror.c  main.c  main.ccn
src/equations/: eq_program.c
src/print/: print.c
src/scanparse/: lexer.l  parser.y
test/: error_name_binding1.tsl  error_name_binding2.tsl  error_name_binding3.tsl  error_type_mismatch1.tsl  error_type_mismatch2.tsl  error_type_mismatch3.tsl  test1.tsl  test2.tsl
